# NewsPlatform

./: .dockerignore  .gitignore  Cargo.toml  Config.toml  Dockerfile  README.md  build.sh  cert.pem  docker-compose.yml  download_models.sh  news_ner.py  package-lock.json  postcss.config.js  run.sh
certs/: hubloid.ru_cert.pem  hubloid.ru_key.pem
news_general/: Cargo.toml
news_general/src/: card.rs  card_fetcher.rs  card_queries.rs  category.rs  cluster.rs  constants.rs  lib.rs  ner.rs  normalize_words.rs  tag.rs  tweet.rs
news_ner/: process.py
news_nlp/configs/: annotator.pbtxt  summarizer.pbtxt
news_parser/: Cargo.toml  build.sh  categories.json  news_ner  news_nlp  nlp_linux  og_images  parserbinary_linux  rewritebinary_linux  run.sh  tessdata  text2wikititle
news_parser/src/: categorise.rs  main.rs  parse.rs  rewrite.rs  tag.rs  translate.rs
news_server/: Cargo.toml  Config.toml  news_svelte  news_templates  package-lock.json  package.json  postcss.config.js  tailwind.config.js
news_server/src/: canonical_middleware.rs  card.rs  card_fetcher.rs  card_queries.rs  helper.rs  indecies.rs  layout_context.rs  lowercase_middleware.rs  main.rs  node_helper.rs  sitemap.rs  state.rs  tag_cache.rs  tailwind.rs  templates.rs  websocket.rs  ws_client.rs  ws_server.rs
news_server/src/graphs/: air.rs  fuel_uah.rs  graphs_manager.rs  mod.rs  news_cluster.rs  stocks.rs
news_server/src/modules/: categories_list.rs  mod.rs  news_list.rs
news_server/src/routes/: authors.rs  categories.rs  error_500.rs  exact.rs  exact_category.rs  exact_tag.rs  exact_trend.rs  index.rs  js_bundle.rs  mod.rs  robots.rs  rss.rs  search_console.rs  sitemap_xml.rs  tags.rs  tweets.rs  yandex_verification.rs
news_server/templates/css/: main.css  main.scss
news_server/templates/css_svelte/: bundle.css
news_server/templates/js/: 100_main.js  3_sveltegraphs.js
news_server/templates/layouts/: layout.tera
news_server/templates/media/: svg_filters.tera
news_server/templates/modules/categories_list/: tpl.scss  tpl.tera
news_server/templates/modules/compact_news_list/: tpl.tera
news_server/templates/modules/exact_card/: tpl.scss  tpl.tera
news_server/templates/modules/group_buttons/: tpl.scss  tpl.tera
news_server/templates/modules/news_list/: tpl.scss  tpl.tera
news_server/templates/modules/tag_item/: tpl.tera
news_server/templates/parts/: graphs.tera  lined_title.tera  menu.tera  popular_tags.tera
news_server/templates/routes/: categories.tera  exact.tera  exact_category.tera  exact_tag.tera  index.tera  tags.tera
news_svelte/: package.json  rollup.config.js
news_svelte/src/: Charts.svelte  Covid.svelte  RunningLine.svelte  TopNews.svelte  Trends.svelte  Tweets.svelte  api.js  covid_store.js  main.js  utils.js  ws_store.js  ws_store_wrap.js
news_svelte/src/components/: CovidGraphSummary.svelte  CovidTimeGraph.svelte  GraphLinearGradient.svelte  GroupButtons.svelte  InfoBlock.svelte  OverlayPopup.svelte  SmartScroll.svelte  SvgFilters.svelte
news_svelte/src/components/Blocks/: Air.svelte  Stocks.svelte
news_svelte/src/icons/: Clock.svelte  Heart.svelte  Link.svelte  Play.svelte  Retweet.svelte
news_svelte/src/locales/: ru.json
news_templates/css/: main.css  main.scss
news_templates/css_svelte/: bundle.css
news_templates/js/: 3_sveltegraphs.js
news_templates/layouts/: layout.tera  layout_amp.tera
news_templates/media/: eye.tera  feed.tera
news_templates/modules/categories_list/: tpl.tera
news_templates/modules/compact_news_list/: tpl.tera
news_templates/modules/exact_card/: tpl.scss  tpl.tera
news_templates/modules/exact_card_amp/: tpl.tera
news_templates/modules/group_buttons/: tpl.scss  tpl.tera
news_templates/modules/image_news_list/: tpl.tera
news_templates/modules/news_list/: tpl.tera
news_templates/modules/tag_item/: tpl.tera
news_templates/parts/: graphs.tera  ldjson.tera  lined_title.tera  menu.tera
news_templates/routes/: authors.tera  categories.tera  exact.tera  exact_amp.tera  exact_category.tera  exact_tag.tera  exact_trend.tera  index.tera  tags.tera  tweets.tera
news_templates/static/: yandex_72d0af7ac55abcfa.html
news_websocket/: Cargo.toml  news_rsmorphy
news_websocket/src/: covid.rs  fuel_uah.rs  main.rs  news_cluster.rs  state.rs  stocks.rs  trends.rs  twitter.rs  ws_client.rs  ws_server.rs
src/: card.rs  card_fetcher.rs  card_queries.rs  constants.rs  main.rs  state.rs  tailwind.rs  templates.rs
src/modules/: compact_news_list.rs  exact_card.rs  mod.rs  news_list.rs
src/routes/: exact.rs  index.rs  mod.rs  test.rs
templates/: exact.html  index.html  layout.html  layout_example.html  menu.html
templates/css/: main.css  main.scss
templates/layouts/: layout.html  layout.tera  test.tera
templates/modules/compact_news_list/: tpl.html  tpl.tera
templates/modules/exact_card/: tpl.html  tpl.scss  tpl.tera
templates/modules/news_list/: tpl.html  tpl.scss  tpl.tera
templates/parts/: lined_title.html  lined_title.tera  menu.html  menu.tera  popular_tags.tera
templates/routes/: exact.html2  exact.tera  index.html  index.tera
