[package]
name = "news_platform"
version = "0.1.0"
authors = ["max"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.2"
actix-files = "0.4"

fluent = "0.13"
duct = "0.13"
env_logger = "0.8"
askama = "0.10"
serde = "1.0"
bson = "1.1"
mongodb = "1.1"
futures = "0.3"
anyhow = "1.0"
config = "0.10"
listenfd = "0.3"
chrono = { version = "0.4", features = ["serde", "unstable-locales"] }
