[package]
name = "news_general"
version = "0.1.0"
authors = ["Max Frai"]
edition = "2018"

[dependencies]
serde = "1.0"
serde_json = "1.0"
config = "0.10"
strum = "0.18"
strum_macros = "0.18"
wikipedia = "0.3"
three-set-compare = {git = "https://github.com/max-frai/three-set-compare-rs"}
rsmorphy = "0.4"
scraper = "0.12.0"
regex = "1.4"
lazy_static = "1.4"
bson = "1.1"
slug = "0.1"
duct = "0.13"
mongodb = "2.0.0-alpha"
futures = "0.3"
comrak = "0.9"
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
maplit = "1.0"
unicode-segmentation = "1.7"
itertools = "0.10"
chrono = "0.4"
unicode-normalization = "0.1"
lru-cache = "0.1"

tokio = { version="1.2", features=["macros", "time", "fs"] }