[package]
name = "news_parser"
version = "0.1.0"
authors = ["Max Frai"]
edition = "2018"

[[bin]]
name = "news_parser"

[dependencies]
news_general = {path = "../news_general"}
chrono = "0.4"
url = "1.2"
bson = "1.1"
byteorder = "1.4"
rand = "0.8"
rayon = "1.5"
whatlang = "0.11"
anyhow = "1.0"
maplit = "1.0"
unicode-segmentation = "1.7"
regex = "1.4"
str_slug = "0.1"
serde_json = "1.0"
serde = "1.0"
duct = "0.13"
strum = "0.18"
strum_macros = "0.18"
comrak = "0.9"
image = "0.23"
bytes = "1.0"
base64="0.13"
lazy_static = "1.4"
config = "0.10"
futures = "0.3"
clap = "3.0.0-beta.2"
wikipedia = "0.3"
three-set-compare = {git = "https://github.com/max-frai/three-set-compare-rs"}
rsmorphy = "0.4"
scraper = "0.12.0"

reqwest = { version = "0.11", features = ["json"] }

browser-rs = { git = "https://maxfrai@bitbucket.org/maxfrai/browser-rs.git" }
rss-parser-rs = { git = "https://maxfrai@bitbucket.org/maxfrai/rss-parser-rs.git" }
html2md = { git = "https://github.com/max-frai/html2md.git" }

mongodb = "2.0.0-alpha"
tokio = { version="1.2", features=["macros", "time"] }