[package]
name = "news_server"
version = "0.1.0"
authors = ["Max Frai"]
edition = "2018"

[[bin]]
name = "news_server"

[dependencies]
news_general = {path = "../news_general"}

actix-web = "3.3"
actix-files = "0.4"
actix-service = "1.0"

serde = "1.0"
fluent = "0.13"
duct = "0.13"
env_logger = "0.8"
lru-cache = "0.1"
lazy_static = "1.4"
tera = "1.6"
bson = "1.1"
mongodb = "1.1"
futures = "0.3"
anyhow = "1.0"
config = "0.10"
listenfd = "0.3"
comrak = "0.9"
alphanumeric-sort = "1.4"
strum = "0.18"
strum_macros = "0.18"
chrono = { version = "0.4", features = ["serde", "unstable-locales"] }
tokio = { version="0.2", features=["macros", "time", "fs"] }
