[package]
name = "news_server"
version = "0.1.0"
authors = ["Max Frai"]
edition = "2018"

[[bin]]
name = "news_server"

[dependencies]
news_general = {path = "../news_general"}

actix-web = "4.0.0-beta.1"
actix-files = "0.6.0-beta.1"
actix-service = "=2.0.0-beta.3"
actix-rt = "=2.0.0-beta.2"
actix-web-actors  = "4.0.0-beta.1"
actix = "0.11.0-beta.1"

rayon = "1.5"
regex = "1.4"
html2md = "0.2"
serde = "1.0"
serde_json = "1.0"
fluent = "0.15"
duct = "0.13"
env_logger = "0.8"
lru-cache = "0.1"
lazy_static = "1.4"
# tera = "1.6"
tera = {git = "https://github.com/max-frai/tera"}
bson = "1.1"
mongodb = "2.0.0-alpha"
futures = "0.3"
anyhow = "1.0"
sitemap = "0.4"
config = "0.10"
listenfd = "0.3"
maplit = "1.0"
comrak = "0.9"
alphanumeric-sort = "1.4"
strum = "0.18"
strum_macros = "0.18"
chrono = { version = "0.4", features = ["serde", "unstable-locales"] }
tokio = { version="1.2", features=["macros", "time", "fs"] }
reqwest = { version = "0.11", features = ["json"] }
