[package]
name = "news_websocket"
version = "0.1.0"
authors = ["Max Frai"]
edition = "2018"

[[bin]]
name = "news_websocket"

[dependencies]
actix-web = {version = "4.0.0-beta.1", features = ["openssl"] }
actix-files = "0.6.0-beta.1"
actix-service = "=2.0.0-beta.3"
actix-rt = "=2.0.0-beta.2"
actix-web-actors  = "4.0.0-beta.1"
actix = "0.11.0-beta.1"

news_general = {path = "../news_general"}
bson = "1.1"
rayon = "1.5"
anyhow = "1.0"
duct = "0.13"
env_logger = "0.8"
maplit = "1.0"
regex = "1.4"
serde_json = "1.0"
csv = "1.1"
serde = "1.0"
config = "0.10"
futures = "0.3"
listenfd = "0.3"
rsmorphy = "0.4"
lazy_static = "1.4"
chrono = "0.4"
openssl = "0.10"

reqwest = { version = "0.11", features = ["json"] }

mongodb = "2.0.0-alpha"
tokio = { version="1.2", features=["fs", "macros", "time"] }